Increase accuracy, precision, recall precision

--- a/AmezquitaThesis_2023/Updated_Thesis_Summer2023/Parse CSV.ipynb
+++ b/AmezquitaThesis_2023/Updated_Thesis_Summer2023/Parse CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2ca3f54f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9701efba",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "c54a150a",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[5 rows x 270 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "be163c86",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "065b6223",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "5a8b0deb",
    "metadata": {},
    "outputs": [
@@ -327,6 +327,43 @@
    ],
    "source": [
     "print(classification_report(y, m1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "138c82f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'not_person': {'precision': 0.8806401541508323, 'recall': 0.9069011134384302, 'f1-score': 0.8935777325186695, 'support': 18142}, 'person': {'precision': 0.817385663314953, 'recall': 0.7722165474974464, 'f1-score': 0.794159357109092, 'support': 9790}, 'accuracy': 0.8596949735070887, 'macro avg': {'precision': 0.8490129087328926, 'recall': 0.8395588304679382, 'f1-score': 0.8438685448138807, 'support': 27932}, 'weighted avg': {'precision': 0.8584698310345765, 'recall': 0.8596949735070887, 'f1-score': 0.858732182781459, 'support': 27932}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y, m1, output_dict=True)\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d6f4e6a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8596949735070887\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('accuracy',report['accuracy'])"
    ]
   },
   {
@@ -376,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "712b7362",
    "metadata": {},
    "outputs": [],
@@ -386,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "c169ed6e",
    "metadata": {},
    "outputs": [
@@ -408,6 +445,25 @@
    ],
    "source": [
     "print(classification_report(y, m2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b26b3000",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'not_person': {'precision': 0.8977562883685555, 'recall': 0.9108698048726711, 'f1-score': 0.9042655065802074, 'support': 18142}, 'person': {'precision': 0.8302362204724409, 'recall': 0.8077630234933606, 'f1-score': 0.8188454568987833, 'support': 9790}, 'accuracy': 0.8747314907632823, 'macro avg': {'precision': 0.8639962544204982, 'recall': 0.8593164141830159, 'f1-score': 0.8615554817394954, 'support': 27932}, 'weighted avg': {'precision': 0.8740909058430306, 'recall': 0.8747314907632823, 'f1-score': 0.8743262868186027, 'support': 27932}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y, m2, output_dict=True)\n",
+    "print(report)"
    ]
   },
   {
@@ -457,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "80fb73ee",
    "metadata": {},
    "outputs": [],
@@ -467,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "a4330af8",
    "metadata": {},
    "outputs": [
@@ -489,6 +545,25 @@
    ],
    "source": [
     "print(classification_report(y, m3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4802b177",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'not_person': {'precision': 0.9403948159895007, 'recall': 0.947910924925587, 'f1-score': 0.9441379121029948, 'support': 18142}, 'person': {'precision': 0.9020217729393468, 'recall': 0.8886618998978549, 'f1-score': 0.8952919989709287, 'support': 9790}, 'accuracy': 0.9271444937705857, 'macro avg': {'precision': 0.9212082944644238, 'recall': 0.9182864124117209, 'f1-score': 0.9197149555369617, 'support': 27932}, 'weighted avg': {'precision': 0.9269452924515869, 'recall': 0.9271444937705857, 'f1-score': 0.9270177098416842, 'support': 27932}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y, m3, output_dict=True)\n",
+    "print(report)"
    ]
   },
   {
@@ -538,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "39f1dba5",
    "metadata": {},
    "outputs": [],
@@ -548,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "605b535c",
    "metadata": {},
    "outputs": [
@@ -570,6 +645,25 @@
    ],
    "source": [
     "print(classification_report(y, m4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "590810de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'not_person': {'precision': 0.9472020923009862, 'recall': 0.9582184985117407, 'f1-score': 0.9526784491026168, 'support': 18142}, 'person': {'precision': 0.9208685666562272, 'recall': 0.9010214504596528, 'f1-score': 0.910836904331664, 'support': 9790}, 'accuracy': 0.9381712730917944, 'macro avg': {'precision': 0.9340353294786067, 'recall': 0.9296199744856968, 'f1-score': 0.9317576767171404, 'support': 27932}, 'weighted avg': {'precision': 0.937972348062758, 'recall': 0.9381712730917944, 'f1-score': 0.9380132363248842, 'support': 27932}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y, m4, output_dict=True)\n",
+    "print(report)"
    ]
   },
   {
@@ -608,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "5bc779e9",
    "metadata": {},
    "outputs": [],
@@ -618,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "0042fcf4",
    "metadata": {},
    "outputs": [
@@ -640,6 +734,25 @@
    ],
    "source": [
     "print(classification_report(y, m5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "817ecb20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'not_person': {'precision': 0.9508436080467229, 'recall': 0.9691875206702679, 'f1-score': 0.9599279357973467, 'support': 18142}, 'person': {'precision': 0.9407838983050848, 'recall': 0.907150153217569, 'f1-score': 0.9236609464378576, 'support': 9790}, 'accuracy': 0.9474437920664471, 'macro avg': {'precision': 0.9458137531759039, 'recall': 0.9381688369439185, 'f1-score': 0.9417944411176021, 'support': 27932}, 'weighted avg': {'precision': 0.9473177395671784, 'recall': 0.9474437920664471, 'f1-score': 0.9472165715617246, 'support': 27932}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y, m5, output_dict=True)\n",
+    "print(report)"
    ]
   },
   {
@@ -678,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "ce271729",
    "metadata": {},
    "outputs": [],
@@ -688,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "8205db4f",
    "metadata": {},
    "outputs": [
@@ -710,6 +823,25 @@
    ],
    "source": [
     "print(classification_report(y, m6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d529961e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'not_person': {'precision': 0.9454015229248799, 'recall': 0.9649432256642047, 'f1-score': 0.9550724242341581, 'support': 18142}, 'person': {'precision': 0.9324482209240573, 'recall': 0.8967313585291113, 'f1-score': 0.9142410830512887, 'support': 9790}, 'accuracy': 0.9410353716167836, 'macro avg': {'precision': 0.9389248719244686, 'recall': 0.930837292096658, 'f1-score': 0.9346567536427234, 'support': 27932}, 'weighted avg': {'precision': 0.9408614675551228, 'recall': 0.9410353716167836, 'f1-score': 0.9407612818104043, 'support': 27932}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y, m6, output_dict=True)\n",
+    "print(report)"
    ]
   },
   {
